--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "fmt": "prettier -w ."
+  },
   "devDependencies": {
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
 }
